src-tauri/check_output_3.txt
    Checking pursue-data-analyzer v0.2.0 (/Users/kody/NuGit/pursue/src-tauri)
error[E0432]: unresolved imports `ort::Session`, `ort::Value`
 --> src/search.rs:4:11
  |
4 | use ort::{Session, Value};
  |           ^^^^^^^  ^^^^^ no `Value` in the root
  |           |
  |           no `Session` in the root
  |
help: a similar name exists in the module (notice the capitalization)
  |
4 - use ort::{Session, Value};
4 + use ort::{session, Value};
  |
help: a similar name exists in the module (notice the capitalization)
  |
4 - use ort::{Session, Value};
4 + use ort::{Session, value};
  |

error[E0425]: cannot find function `path` in crate `sqlite_vec`
  --> src/db/mod.rs:22:32
   |
22 |     let vec_path = sqlite_vec::path();
   |                                ^^^^ not found in `sqlite_vec`

warning: unused imports: `Components`, `Disks`, `Networks`, and `Users`
 --> src/analysis/diagnostics.rs:2:15
  |
2 | use sysinfo::{Components, Disks, Networks, System, Users};
  |               ^^^^^^^^^^  ^^^^^  ^^^^^^^^          ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Allocated`
 --> src/analysis/native_macos.rs:7:21
  |
7 |     use objc2::rc::{Allocated, Id};
  |                     ^^^^^^^^^

warning: unused import: `NSError`
 --> src/analysis/native_macos.rs:9:51
  |
9 |     use objc2_foundation::{NSArray, NSDictionary, NSError, NSString, NSURL};
  |                                                   ^^^^^^^

warning: unused import: `VNRecognizedTextObservation`
  --> src/analysis/native_macos.rs:11:56
   |
11 |         VNImageRequestHandler, VNRecognizeTextRequest, VNRecognizedTextObservation, VNRequest,
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::analysis::diagnostics::IntelligenceTier`
  --> src/analysis/mod.rs:19:5
   |
19 | use crate::analysis::diagnostics::IntelligenceTier;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `sqlx::FromRow`
 --> src/models.rs:2:5
  |
2 | use sqlx::FromRow;
  |     ^^^^^^^^^^^^^

warning: use of deprecated type alias `objc2::rc::Id`: Renamed to `Retained`.
 --> src/analysis/native_macos.rs:7:32
  |
7 |     use objc2::rc::{Allocated, Id};
  |                                ^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `objc2::rc::Id`: Renamed to `Retained`.
  --> src/analysis/native_macos.rs:36:50
   |
36 |                 unsafe { NSArray::from_slice(&[&*Id::cast::<VNRequest>(request.clone())]) };
   |                                                  ^^

error[E0277]: the trait bound `impl futures_util::Future<Output = std::result::Result<Vec<f32>, anyhow::Error>>: serde::Serialize` is not satisfied
    --> src/analysis/mod.rs:393:53
     |
 393 |             let vector_json = serde_json::to_string(&vectorize_text(chunk))?;
     |                               --------------------- ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |                               |
     |                               required by a bound introduced by this call
     |
     = help: the trait `models::_::_serde::Serialize` is not implemented for `impl futures_util::Future<Output = std::result::Result<Vec<f32>, anyhow::Error>>`
     = note: for local types consider adding `#[derive(serde::Serialize)]` to your `impl futures_util::Future<Output = std::result::Result<Vec<f32>, anyhow::Error>>` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `models::_::_serde::Serialize`:
               &'a T
               &'a mut T
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and 559 others
note: required by a bound in `serde_json::to_string`
    --> /Users/kody/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_json-1.0.149/src/ser.rs:2247:17
     |
2245 | pub fn to_string<T>(value: &T) -> Result<String>
     |        --------- required by a bound in this function
2246 | where
2247 |     T: ?Sized + Serialize,
     |                 ^^^^^^^^^ required by this bound in `to_string`
     = note: the full name for the type has been written to '/Users/kody/NuGit/pursue/src-tauri/target/debug/deps/pursue_data_analyzer_lib-98377a5d17761e47.long-type-4315608688761322203.txt'
     = note: consider using `--verbose` to print the full type name to the console

warning: use of deprecated associated function `objc2::rc::Retained::<T>::cast`: Use `downcast`, or `cast_unchecked` instead
  --> src/analysis/native_macos.rs:36:54
   |
36 |                 unsafe { NSArray::from_slice(&[&*Id::cast::<VNRequest>(request.clone())]) };
   |                                                      ^^^^

Some errors have detailed explanations: E0277, E0425, E0432.
For more information about an error, try `rustc --explain E0277`.
warning: `pursue-data-analyzer` (lib) generated 9 warnings
error: could not compile `pursue-data-analyzer` (lib) due to 3 previous errors; 9 warnings emitted
